# vessel-encounters-api

./: .gitignore  .replit  Dockerfile  README.md  main.py  pyproject.toml  read.md  replit.md
attached_assets/: vmodel_pipeline_1760914232646.pkl
infra/: deployment-pythonapi.yaml  deployment-redis.yaml  namespace.yaml  service-prediction.yaml  service-redis.yaml
mvp/: Dockerfile  README.md  pyproject.toml
mvp/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  service-prediction.yaml  service-redis.yaml
mvp/src/: main.py
